Horizontal scroll minor fix.

--- a/app/assets/stylesheets/deskspotting.css.scss
+++ b/app/assets/stylesheets/deskspotting.css.scss
@@ -529,6 +529,10 @@ input[type="checkbox"]:checked:after {
   #features{
     background: $dark-white;
     padding-bottom: 76px;
+    .row{
+      width: 99%;
+      margin: 0px auto;
+    }
     .features-content-box{
       padding: 70px 28px;
       text-align: center;
@@ -814,6 +818,10 @@ input[type="checkbox"]:checked:after {
       margin-left: auto;
     }
     background: $light-black;
+    .row{
+      width: 99%;
+      margin: 0px auto;
+    }
     .icon{
       width: 100%;
       height: 200px;
